crates/plotnik-tests/tests/04-emit/bytecode/anchors/exact_last_child_impossible.txt
Q = (array (identifier) .!)
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), the last child of `array` must be `identifier`, but `array` ends with `"]"`
 --> query.ptk:1:6
  |
1 | Q = (array (identifier) .!)
  |      ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap, including anonymous tokens and comments. The soft anchor `.` skips those: `(array (identifier) .)`
